Put acpi_video1/0 before intel_backlight

Now we know that firmware interface should be put BEFORE the raw ones
so in this case, acpi_video1/0 are firmware and intel_backlight is RAW.

BUG:292873
CCBUG:288180