daemon/backends/upower/backlighthelper.cpp
@@ -22,6 +22,7 @@
 #include <QtCore/QDir>
 #include <QtCore/QDebug>
 
+
 #define PREFIX "/sys/class/backlight/"
 
 BacklightHelper::BacklightHelper(QObject * parent)
@@ -34,9 +35,9 @@ void BacklightHelper::init()
 {
     // find the first existing device with backlight support
     QStringList interfaces;
-    interfaces << "nv_backlight" << "intel_backlight" << "radeon_bl" << "mbp_backlight"
-               << "asus_laptop" << "toshiba" << "eeepc" << "thinkpad_screen" << "acpi_video1"
-               << "acpi_video0" << "apple_backlight" << "fujitsu-laptop" << "samsung"
+    interfaces << "nv_backlight" << "radeon_bl" << "mbp_backlight" << "asus_laptop"
+               << "toshiba" << "eeepc" << "thinkpad_screen" << "acpi_video1" << "acpi_video0"
+               << "intel_backlight" << "apple_backlight" << "fujitsu-laptop" << "samsung"
                << "nvidia_backlight" << "dell_backlight" << "sony" << "pwm-backlight"
                ;
 
